--- a/index.html
+++ b/index.html
@@ -1,13 +1,41 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>porfolio-v6</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
+  <!-- HTML Meta Tags -->
+<title>Ayaz Mirza | Data Engineer</title>
+<meta name="description" content="Ayaz's Portfolio Website">
+
+<!-- Facebook Meta Tags -->
+<meta property="og:url" content="https://ayazmirza54.in">
+<meta property="og:type" content="website">
+<meta property="og:title" content="Ayaz Mirza | Data Engineer">
+<meta property="og:description" content="Ayaz's Portfolio Website">
+<meta property="og:image" content="YOUR_IMAGE_URL_HERE">
+
+<!-- Twitter Meta Tags -->
+<meta name="twitter:card" content="summary_large_image">
+<meta property="twitter:domain" content="ayazmirza54.in">
+<meta property="twitter:url" content="https://ayazmirza54.in">
+<meta name="twitter:title" content="Ayaz Mirza | Data Engineer">
+<meta name="twitter:description" content="Ayaz's Portfolio Website">
+<meta name="twitter:image" content="YOUR_IMAGE_URL_HERE">
+
+<!-- Meta Tags Generated via https://www.opengraph.xyz -->
+
+<!-- NOTE: You selected a new image. Please upload it to your server and replace "YOUR_IMAGE_URL_HERE" with the actual URL. -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Ayaz Mirza | Data Engineer</title>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
