--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <meta property="og:type" content="website">
 <meta property="og:title" content="Ayaz Mirza | Data Engineer">
 <meta property="og:description" content="Ayaz's Portfolio Website">
-<meta property="og:image" content="https://github.com/ayazmirza54/porfolio-v5/blob/main/public/og_banner.png">
+<meta property="og:image" content="https://github.com/ayazmirza54/porfolio-v5/blob/main/public/og_banner.png?raw=true">
 
 <!-- Twitter Meta Tags -->
 <meta name="twitter:card" content="summary_large_image">
@@ -24,7 +24,7 @@
 <meta property="twitter:url" content="https://ayazmirza54.in">
 <meta name="twitter:title" content="Ayaz Mirza | Data Engineer">
 <meta name="twitter:description" content="Ayaz's Portfolio Website">
-<meta name="twitter:image" content="https://github.com/ayazmirza54/porfolio-v5/blob/main/public/og_banner.png">
+<meta name="twitter:image" content="https://github.com/ayazmirza54/porfolio-v5/blob/main/public/og_banner.png?raw=true">
 
 <!-- Meta Tags Generated via https://www.opengraph.xyz -->
 
